# computer-graphics-lab

./: .gitignore
asteroids/: CMakeLists.txt  Readme.md  game.cc  game.h  game_controller.h  game_test.cc  geometry.cc  geometry.h  geometry.tcc  geometry_test.cc  main_game.cc  math.cc  math.h  math.tcc  math_test.cc  physics.cc  physics.h  physics.tcc  physics_test.cc  renderer.h  sdl2_game_controller.cc  sdl2_game_controller.h  sdl2_renderer.cc  sdl2_renderer.h  sound.cc  sound.h  timer.cc  timer.h
geometry/: CMakeLists.txt  math.tcc
math/: CMakeLists.txt  math.h  math.tcc  math_test.cc
